<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">QGIS installer</string>
    <string name="quit">Quit</string>
    <string name="downloading_dialog_message">Downloading</string>
    <string name="install_dialog_title">Download QGIS package?</string>
    <string name="install_dialog_message">This will download and install QGIS %1$s (build %2$s). The download is %3$s MB big, do you want to continue?</string>
    <string name="no_connectivity_dialog_title">No data connectivity detected</string>
    <string name="no_connectivity_dialog_message">Check your connectivity settings and try again</string>
    <string name="retry">Retry</string>
    <string name="about">About</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="donate">Donate to QGIS</string>
    <string name="install">Download and install QGIS (recommended)</string>
    <string name="about_dialog_message">Android QGIS installer allows you to easily install and update Quantum GIS. It was developped By Marco Bernasocchi (opengis.ch)</string>
    <string name="visit_dev">Visit opengis.ch</string>
    <string name="latest_is_already_installed_dialog_message">You already have the latest QGIS version installed.</string>
    <string name="start_qgis">Start QGIS</string>
    <string name="md5_error">The package didn\'t download correctly (md5 hash mismatch)</string>
    <string name="loading_info_dialog_message">QGIS installer is downloading informations about the latest available release</string>
    <string name="please_wait">Please wait</string>
    <string name="install_nightly">Download and install QGIS nightly</string>
    <string name="logo">QGIS Logo</string>
    <string name="clear_downloads">Clear download cache</string>
    <string name="clear_downloads_dialog_message">This will remove all previously downloaded QGIS packages. It will NOT remove QGIS nor the installer. Removing the packages will free space on your device, but to reinstall QGIS you will have to redownload the packages.</string>
    <string name="clear_downloads_dialog_title">Clear QGIS download cache</string>
</resources>
