<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/Photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:maxHeight="250dp"
            android:maxWidth="250dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon" />

        <Button
            android:id="@+id/installButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install" />

        <Button
            android:id="@+id/installNightlyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/install_nightly" />

        <Button
            android:id="@+id/clearDownloadsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/clear_downloads" />

        <Button
            android:id="@+id/donateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit" />
    </LinearLayout>

</ScrollView>